[gd_scene load_steps=12 format=3 uid="uid://y14fn6j2kqm3"]

[ext_resource type="Script" path="res://GameBoard/GameBoard.gd" id="1_lty5j"]
[ext_resource type="Script" path="res://UI/InputManager.gd" id="2_blcx6"]
[ext_resource type="PackedScene" uid="uid://dfadgaktnm624" path="res://Units/PlayerUnit.tscn" id="3_dmna3"]
[ext_resource type="PackedScene" uid="uid://cmy4ycwq53ul2" path="res://Prototyping/Box.tscn" id="4_t58ag"]
[ext_resource type="Texture2D" uid="uid://dhjqljog8gjbn" path="res://icon.svg" id="5_7oytf"]
[ext_resource type="Script" path="res://GameBoard/Cursor.gd" id="5_64lmv"]
[ext_resource type="PackedScene" uid="uid://qemowma3sf0r" path="res://UI/CardDeckUI.tscn" id="5_wefjj"]
[ext_resource type="PackedScene" uid="uid://ouuora8lxpt7" path="res://Units/EnemyUnit.tscn" id="7_7icr8"]
[ext_resource type="Script" path="res://GameBoard/CombatManager.gd" id="8_quw6g"]

[sub_resource type="LabelSettings" id="LabelSettings_4u0tp"]
font_size = 20

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pp4sk"]
albedo_color = Color(0.615686, 0.866667, 0, 1)

[node name="GameBoard" type="Node3D"]
script = ExtResource("1_lty5j")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 20, 10)
current = true

[node name="Cursor" type="Sprite3D" parent="."]
texture = ExtResource("5_7oytf")
script = ExtResource("5_64lmv")

[node name="InputManager" type="Control" parent="." node_paths=PackedStringArray("game_board", "cursor", "camera3d", "turn_timer", "input_buffer_timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_blcx6")
game_board = NodePath("..")
cursor = NodePath("../Cursor")
camera3d = NodePath("../Camera3D")
turn_timer = NodePath("../TurnTimer")
input_buffer_timer = NodePath("../InputBufferTimer")

[node name="AttackButton" type="Button" parent="InputManager"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 250.0
grow_vertical = 0
text = "Attack
"

[node name="CardDeckUI" parent="InputManager" instance=ExtResource("5_wefjj")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="EventLabel" type="RichTextLabel" parent="InputManager"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -375.0
offset_right = 375.0
offset_bottom = 75.0
grow_horizontal = 2

[node name="UndoButton" type="Button" parent="InputManager"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
text = "Undo
"

[node name="StatsLabel" type="Label" parent="InputManager"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.66358
anchor_bottom = 0.66358
offset_top = -25.0
offset_right = 250.0
offset_bottom = 25.0
grow_vertical = 2
label_settings = SubResource("LabelSettings_4u0tp")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="BackToMenuButton" type="Button" parent="InputManager"]
layout_mode = 1
offset_right = 200.0
offset_bottom = 80.0
text = "Back To Menu"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, 0, 0.258819, -0.103606, 0.916384, 0.386661, -0.237178, -0.400301, 0.885159, 0, 70, -11)

[node name="PlayerUnit" parent="." instance=ExtResource("3_dmna3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -2)

[node name="Box" parent="." instance=ExtResource("4_t58ag")]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, -20)

[node name="BoxLine" type="CSGBox3D" parent="."]
material = SubResource("StandardMaterial3D_pp4sk")

[node name="EnemyUnit" parent="." instance=ExtResource("7_7icr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4435, 0.5, -14.7083)

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("8_quw6g")

[node name="EnemyUnit2" parent="." instance=ExtResource("7_7icr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.4451, 0.5, -28.6717)

[node name="EnemyUnit3" parent="." instance=ExtResource("7_7icr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.23204, 0.5, -37.2569)

[node name="EnemyUnit4" parent="." instance=ExtResource("7_7icr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.05293, 0.5, -22.0237)

[node name="PlayerUnit2" parent="." instance=ExtResource("3_dmna3")]
transform = Transform3D(0.999109, 0.042207, 0, -0.042207, 0.999109, 0, 0, 0, 1, 6.60937, 2.30312, 0)

[node name="EnemyUnit5" parent="." instance=ExtResource("7_7icr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.64167, 0.5, -26.417)

[node name="EnemyUnit6" parent="." instance=ExtResource("7_7icr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.48176, 0.5, -25.9327)

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="InputBufferTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true
